# florence-2-sharp

./: .editorconfig  .gitignore  FlorenceTwoLab.sln  README.md
.github/: copilot-instructions.md
FlorenceTwoLab.Core/: BartTokenizer.cs  DecoderPostProcessor.cs  EncoderPreProcessor.cs  Florence2.cs  Florence2Config.cs  Florence2Debug.cs  Florence2ImageProcessor.cs  Florence2LocationTokens.cs  Florence2ModelRunner.cs  Florence2Pipeline.cs  Florence2Query.cs  Florence2Result.cs  Florence2TaskType.cs  Florence2TaskTypeExtensions.cs  Florence2Tasks.cs  Florence2Tokenizer.cs  FlorenceTwoLab.Core.csproj  ImageProcessor.cs  ModelOutput.cs  ModelRunner.cs
FlorenceTwoLab.Core.Tests/: BartTokenizerTests.cs  FlorenceTwoLab.Core.Tests.csproj
FlorenceTwoLab.Core.Tests/Resources/: Data.cs
FlorenceTwoLab.Core/Utils/: Trie.cs  (+2 more)
FlorenceTwoLab.Desktop/: App.axaml  App.axaml.cs  ConsoleHelper.cs  DataHelper.cs  FlorenceTwoLab.Desktop.csproj  ImageConverter.cs  MainViewModel.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
FlorenceTwoLab.Wpf/: App.xaml  App.xaml.cs  FlorenceTwoLab.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs
research/: AutoProcessor.cs  AutoTokenizer.cs  Florence2.cs  TensorConcatenation.cs  TensorConcatenation.md  added_tokens (trimmed).json  config.json  merges (trimmed).txt  sample_inference.ipynb  special_tokens_map (trimmed).json  tokenizer (trimmed).json  tokenizer_config (trimmed).json  vocab (trimmed).json
research/python_reference_implementation/: main.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.py  setup.sh
(+24 files in other folders)
